name: GosperCurve
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable GosperCurve
  main-is: Main.hs
  buildable: True
  build-depends:
      Rasterific -any,
      base -any,
      JuicyPixels -any
  default-language: Haskell2010
  other-modules:
      Path2D
      GosperCurve
